scripts/testdata/attach-gateway-certificate/gateway.json
{
  "apiVersion": "gateway.networking.k8s.io/v1",
  "kind": "Gateway",
  "metadata": {
    "name": "paprika",
    "namespace": "envoy-gateway-system",
    "resourceVersion": "12345"
  },
  "spec": {
    "listeners": [
      {
        "name": "http",
        "port": 80,
        "protocol": "HTTP"
      },
      {
        "name": "https",
        "port": 443,
        "protocol": "HTTPS",
        "tls": {
          "mode": "Terminate",
          "certificateRefs": [
            {
              "group": "",
              "kind": "Secret",
              "name": "paprika-tls",
              "namespace": "paprika-e2e"
            },
            {
              "group": "",
              "kind": "Secret",
              "name": "deephost-tls",
              "namespace": "deephost"
            }
          ]
        }
      }
    ]
  }
}
