scripts/testdata/attach-gateway-certificate/secret.json
{
  "apiVersion": "v1",
  "kind": "Secret",
  "metadata": {
    "name": "dns-tls",
    "namespace": "dns"
  },
  "type": "kubernetes.io/tls",
  "data": {
    "tls.crt": "Zml4dHVyZS1jZXJ0aWZpY2F0ZQ==",
    "tls.key": "eA=="
  }
}
